--- a/ui/package.json
+++ b/ui/package.json
@@ -6,11 +6,14 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "cra-template": "1.2.0",
+    "midi-player-js": "^2.0.16",
     "pdfjs-dist": "^3.11.174",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
+    "react-piano": "^3.1.3",
     "react-scripts": "5.0.1",
+    "tone": "^15.0.4",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
